[package]
name = "Music_Link_Converter"
version = "0.1.0"
edition = "2024"

[dependencies]
fluxer-core     = { version = "0.3.1", default-features = false }
fluxer-builders = "0.3.1"
fluxer-rest     = "0.3.1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing            = "0.1"
dotenvy            = "0.15"